--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 appdirs==1.4.4
+bcrypt==3.1.7
+cffi==1.14.0
 click==7.1.2
 distlib==0.3.0
 filelock==3.0.12
@@ -9,6 +11,7 @@ Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+pycparser==2.20
 six==1.15.0
 SQLAlchemy==1.3.17
 virtualenv==20.0.21
