--- a/app/.env
+++ b/app/.env
@@ -1,4 +1,6 @@
-export AUTH0_API_CLIENT_SECRET="-sKeeNqtvTcKGuxNXErFtYvsFn9-q9C_HmIiLrk8awHgnE2aiE1L9qq0jKL-F0xO"
-export AUTH0_CLIENT_ID="GR6mGA4jOvDZINkW6yIarBuGlSGU1rVB"
-export AUTH0_DOMAIN="dev-ju4b9g5i.eu.auth0.com"
-export AUTH0_API_AUDIENCE="https://bistro/api/"
+APP_PORT=3000
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=645610515
+POSTGRES_DB=Example
