--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,8 @@
-APP_PORT=3000
-POSTGRES_HOST=localhost
+# APP settings
+SERVER_PORT=3000
+
+# DB settings
+POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=645610515
